# big_data_analysis_course

./: .gitignore  README.md
L0T3/: lotr.csv
L0T3/src/main/scala/: Main.scala
common_sources/: lotr.txt  manifesto.txt  test1.txt  test2.txt
l1t1/src/main/scala/: Main.scala
l1t2/src/main/scala/: Main.scala
l2t1/src/main/scala/: Main.scala
l2t2/src/main/scala/: Main.scala
l2t3/src/main/scala/: Main.scala
l3t1_rust/: Cargo.toml  crawl_data.txt
l3t1_rust/src/: main.rs
list1task2/: README.md  build.sbt
list1task2/src/main/scala/: Main.scala
list1task3/src/main/scala/: Main.scala
