[package]
name = "l3t1_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
tokio = { version = "1.0.0", features = ["full"] }
regex = "1.5.4"
lazy_static = "1.4.0"
itertools = "0.10.3"
futures = "0.3.19"
async-recursion = "1.0.0"
rand = "0.8.4"
